manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibonjour123456-ceaee-https-ingress
  namespace: ibonjour123456-ceaee
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thanak81-ibonjour123456.assessify.org
      secretName: ibonjour123456-ceaee-secret-tls
  rules:
    - host: thanak81-ibonjour123456.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibonjour123456-ceaee-service
                port:
                  number: 8095
